# optimal_offer

./: .env.example  .gitignore  EXECUTIVE_SUMMARY.md  README.md  pyproject.toml
model_training/: imbalance-direction.ipynb  imbalance-price.ipynb  spot-price.ipynb  wind-scenarios.ipynb
notebooks/: 00-data_sources.ipynb  02-scenario-creation.ipynb  05-strategy_comparison.ipynb
src/: __init__.py
src/data/: __init__.py  base.py  energinet.py  nordpool.py  renewablesninja.py
src/market/: __init__.py  market_models.py  model_MaxProfitCVar.py  profit_evaluation.py  strategy_evaluation.py
src/scenarios/: __init__.py  base.py
src/scenarios/imbalance_direction/: __init__.py  markov_chain.py
src/scenarios/imbalance_price/: __init__.py  conditional_sampling.py  spread_model.py
src/scenarios/spot_price/: __init__.py  ar_model.py  arimax.py
src/scenarios/wind_production/: __init__.py  conditional_nvp.py  gaussian_noise.py
trained_models/imbalance_direction/: markov_chain.npy
trained_models/imbalance_price/: spread.npz
trained_models/spot_price/: ar.npz
trained_models/wind_generation/: conditional_nvp.pt
