[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"   

[project]
name = "optimal_bidding"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "pytest",
    "pyarrow",
    "fastparquet",
    "python-dotenv",
    "linopy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]